prevent facebook button overlap

--- a/assets/css/less/wpbdp.less
+++ b/assets/css/less/wpbdp.less
@@ -281,7 +281,7 @@ form#wpbdmsearchform a.advanced-search-link {
 
         &.facebook {
             display: inline-block;
-            height: 0px;
+            height: 20px;
             margin-right: 10px;
 
             .fb-like span:first-of-type {
